<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7"
    android:orientation="vertical"
    tools:context=".QuizPageOne">

    <TextView
        android:id="@+id/quiz1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz1"/>

    <RadioGroup
        android:id="@+id/quiz1radio"
        android:layout_marginLeft="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/q1_option1"/>
        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/q1_option2"/>
        <RadioButton
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/q1_option3"/>
        <RadioButton
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/q1_option4"/>

    </RadioGroup>

    <Button
        android:id="@+id/next1"
        android:layout_marginTop="76dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BA68C8"
        android:text="@string/next1"
        android:onClick="nextOne"/>

</LinearLayout>
